// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard Debe de mostrar el componente correctamente con el titulo personalizado 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product cart
  </h1>
</div>
`;

exports[`ProductCard Debe incrementar el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Producr card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;
